--- a/AngProj.html
+++ b/AngProj.html
@@ -3,28 +3,68 @@
 </head>
 
 <body>
-<div class="container">
-  <header>
-    <h1>FITtoDo List</h1>
+  <div class="container">
+    <header>
+      <h1>Fitness Todo List</h1>
+    </header>
+
+    <section id="tasks">
+      <h2>Tasks</h2>
       <form class="new-task">
-          <input type="text" name="text" placeholder="Type to add new tasks" />
-      </form>
-  </header>
-  <ul>
-    {{#each tasks}}
-    {{> task}}
-    {{/each}}
-  </ul>
-</div>
+        <form class="new-task">
+            <input type="text" name="text" placeholder="Type to add new tasks" />
+            <button type="submit">Add Task</button>
+        </form>
+    </header>
+    <ul>
+      {{#each tasks}}
+      {{> task}}
+      {{/each}}
+    </ul>
+  </section>
+
+  <section id="settings">
+    <h2>Settings</h2>
+    <form class="new-setting">
+      <input type="text" name="settingName" placeholder="Setting Name" />
+      <input type="text" name="settingValue" placeholder="Setting Value" />
+      <button type="submit">Add Setting</button>
+    </form>
+    <ul>
+      {{#each settings}}
+      {{> setting}}
+      {{/each}}
+    </ul>
+  </section>
+  </div>
 </body>
 
 <template name="task">
- <li class="{{#if checked}}checked{{/if}}">
-     <button class="delete">&times;</button>
+  <li class="{{#if checked}}checked{{/if}}">
+    <button class="toggle-checked">Check</button>
+    <span class="text">{{text}}</span>
+    <button class="delete">Delete</button>
+  </li>
+</template>
 
-     <input type="checkbox" checked="{{checked}}" class="toggle-checked">
+<template name="setting">
+  <li>
+    <span class="settingName">{{settingName}}</span>
+    <span class="settingValue">{{settingValue}}</span>
+    <!-- Add buttons or links for additional actions if needed -->
+  </li>
+</template>
 
-     <span class="text">{{text}}</span>
+<template name="set">
+  <li>
+    <span class="setName">{{setName}}</span>
+    <!-- Add buttons or links for additional actions if needed -->
+  </li>
+</template>
 
- </li>
+<template name="day">
+  <li>
+    <span class="dayName">{{dayName}}</span>
+    <!-- Add buttons or links for additional actions if needed -->
+  </li>
 </template>
